test/configCases/errors/chunk-name-path-traversal-require-ensure/webpack.config.js
"use strict";

/** @type {import("../../../../").Configuration} */
module.exports = {
	mode: "production",
	output: {
		filename: "[name].js"
	}
};
